[project]
name = "crewai_agent_tutorial"
version = "0.1.0"
description = "crewai_agent_tutorial using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
]

[project.scripts]
kickoff = "crewai_agent_tutorial.main:kickoff"
run_crew = "crewai_agent_tutorial.main:kickoff"
plot = "crewai_agent_tutorial.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
